<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthFragment">

        <TextView
            android:id="@+id/textview_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:text="@string/admin"
            android:textAppearance="@style/admin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="908dp"
            android:layout_height="87dp"
            android:autofillHints="admin"
            android:hint="@string/Username"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textview_second"
            app:layout_constraintVertical_bias="0.368"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="907dp"
            android:layout_height="87dp"
            android:hint="@string/Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/username_edittext"
            app:layout_constraintVertical_bias="0.368"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/button_login"
            android:layout_width="194dp"
            android:layout_height="98dp"
            android:text="@string/login"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password_edittext"
            app:layout_constraintVertical_bias="0.523"
            tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>