<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:entries="@array/language_entries"
        android:prompt="@string/language"
        app:layout_constraintBottom_toTopOf="@id/button_have"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128"
        android:background="@drawable/border"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="746dp"
        android:layout_height="341dp"
        android:gravity="center"
        android:text="@string/soda"
        android:textAppearance="@style/title"
        app:layout_constraintBottom_toTopOf="@id/button_have"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/soda_colorful"
        android:layout_width="550dp"
        android:layout_height="550dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/soft_drinks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="@id/textview_second"
        tools:ignore="ContentDescription,MissingConstraints" />

    <ImageView
        android:id="@+id/soda"
        android:layout_width="550dp"
        android:layout_height="550dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/soft_drinks_colorful"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="@id/textview_second"
        tools:ignore="ContentDescription,MissingConstraints" />

    <Button
        android:id="@+id/button_have"
        android:layout_width="543dp"
        android:layout_height="252dp"
        android:gravity="start|center_vertical"
        android:text="@string/tips"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />
</androidx.constraintlayout.widget.ConstraintLayout>